#59: fix ticketoptions link alignment

--- a/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
@@ -120,4 +120,12 @@ fieldset.TableSmall > div.FAQDivider {
     overflow: hidden;
 }
 
+/**
+ * @subsection TicketOptionLink
+ */
+
+fieldset.ModularForm .Field #OptionFAQ {
+    align-self: center;
+}
+
 }
